@@ -400,6 +400,9 @@ Set the job's name to the specified value.
 .TP
 \fINice\fP[=delta]
 Adjust job's priority by the specified value. Default value is 100.
+The adjustment range is from \-10000 (highest priority)
+to 10000 (lowest priority). Only privileged users can specify
+a negative adjustment.
 .TP
 \fIPartition\fP=<name>
 Set the job's partition to the specified value.
@@ -409,6 +412,7 @@ Set the job's priority to the specified value.
 Note that a job priority of zero prevents the job from ever being scheduled.
 By setting a job's priority to zero it is held.
 Set the priority to a non\-zero value to permit it to run.
+Explicitly setting a job's priority clears any previously set nice value.
 .TP
 \fIReqCores\fP=<count>
 Set the job's count of required cores to the specified value.
