@@ -197,6 +197,8 @@ documents those changes that are of interest to users and admins.
  -- Updated sview config info
  -- Fix a couple of bugs with respect to scheduling with overlapping 
     reservations (one with a flag of "Maintenance").
+ -- Fix bug when updating a pending job's nice value after explicitly setting
+    it's priority.
 
 * Changes in SLURM 2.0.4
 ========================
